Not allow compression when requesting multimedia because ffmpeg does not expect compressed files. (It does not make sense to compress audio/video anyways...)

http://codereview.chromium.org/7044092

BUG=47381
TEST=http://www.deafmac.org/html5/grinchsample.mp4 (Please clear browser cache, otherwise it can contain original GZIP-ed file requested by old browser)

Review URL: http://codereview.chromium.org/7044092

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@89532 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: d5aec989c84f6f5ba753976acc4e4aeda2525b82